# graphrag-hybrid

./: .dockerignore  .env.example  AI_ENTRY.md  Dockerfile  README.md  app.py  configure-claude.ps1  docker-compose.yml  pyproject.toml  server.py  setup.bat  setup.ps1  setup.sh  start.bat  start.ps1  start.sh
.github/workflows/: ci.yml
docs/: BEGINNERS_GUIDE.md  WINDOWS_SETUP.md
guides/: database_setup.md  index.md
guides/mcp/: connection.md  error_handling.md  examples.md  index.md  query.md  testing.md
guides/testing/: connection_info.md  index.md
scripts/: import_docs.py  index.md  query_demo.py  verify_db_structure.py
src/: __init__.py  config.py  graphrag_mcp_tool.py  index.md  query_engine.py
src/database/: __init__.py  neo4j_manager.py  qdrant_manager.py
src/processors/: __init__.py  document_processor.py  embedding_processor.py  entity_extractor.py  markdown_processor.py  pdf_processor.py
src/utils/: __init__.py  neo4j_utils.py  qdrant_utils.py  query_utils.py
test_db_connection/: connection_info.md  index.md
tests/: conftest.py  test_document_processor.py  test_embedding_processor.py  test_entity_extractor.py  test_query_engine.py
your_docs_here/: index.md  test_sample.md
